<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.EffectiveMobileTest.FeatureShowCase"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="375dp"
    android:background="@drawable/bottom_dialog_shape"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <TextView
        style="@style/Style.App.TextAppearance"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_options"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="31dp"
        />

    <ImageButton
        style="@style/Style.App.ImageButton.Square"
        android:id="@+id/close"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:src="@drawable/clouse"
        android:backgroundTint="?attr/colorPrimary"
        app:tint="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"
        android:layout_marginStart="20dp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Style.FetureShowcase.Button.Filled.Rounded"
        android:id="@+id/done"
        android:layout_width="86dp"
        android:layout_height="37dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"
        android:layout_marginEnd="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Style.FetureShowcase.TextInputLayout.OutlinedBox"
        android:id="@+id/brand_input_layout"
        android:layout_width="337dp"
        android:layout_height="37dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="79dp">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            style="@style/Style.FetureShowcase.MaterialAutoCompleteTextView.Light"
            android:id="@+id/brand"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="14dp"
            tools:text="Samsung"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/Style.App.TextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/brand_input_layout"
        app:layout_constraintBottom_toTopOf="@id/brand_input_layout"
        android:layout_marginBottom="8sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Style.FetureShowcase.TextInputLayout.OutlinedBox"
        android:id="@+id/prise_input_layout"
        android:layout_width="337dp"
        android:layout_height="37dp"
        app:layout_constraintTop_toBottomOf="@id/brand_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="42dp">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            style="@style/Style.FetureShowcase.MaterialAutoCompleteTextView.Light"
            android:id="@+id/prise"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="14dp"
            tools:text="$300 - $500"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/Style.App.TextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prise"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/prise_input_layout"
        app:layout_constraintBottom_toTopOf="@id/prise_input_layout"
        android:layout_marginBottom="8sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Style.FetureShowcase.TextInputLayout.OutlinedBox"
        android:id="@+id/size_input_layout"
        android:layout_width="337dp"
        android:layout_height="37dp"

        app:layout_constraintTop_toBottomOf="@id/prise_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="42dp"
        >

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            style="@style/Style.FetureShowcase.MaterialAutoCompleteTextView.Light"
            android:id="@+id/size"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="14dp"
            tools:text="$300 - $500"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/Style.App.TextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/size_input_layout"
        app:layout_constraintBottom_toTopOf="@id/size_input_layout"
        android:layout_marginBottom="8sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>